@@ -2651,7 +2651,8 @@ one of: <literal>gtk.TREE_VIEW_DROP_BEFORE</literal>,
 	<varlistentry>
 	  <term><emphasis>Returns</emphasis>&nbsp;:</term>
 	  <listitem><simpara>a 2-tuple containing the tree path and the drop
-position relative to the tree path</simpara></listitem>
+	  position relative to the tree path or <literal>
+	  None</literal></simpara></listitem>
 	</varlistentry>
       </variablelist>
 
@@ -2661,7 +2662,8 @@ position relative to the destination row. The drop position is one of:
 <literal>gtk.TREE_VIEW_DROP_BEFORE</literal>,
 <literal>gtk.TREE_VIEW_DROP_AFTER</literal>,
 <literal>gtk.TREE_VIEW_DROP_INTO_OR_BEFORE</literal> or
-<literal>gtk.TREE_VIEW_DROP_INTO_OR_AFTER</literal>.</para>
+<literal>gtk.TREE_VIEW_DROP_INTO_OR_AFTER</literal>. This method returns
+<literal>None</literal> if no drag destination row is set.</para>
 
     </refsect2>
 
