@@ -1,5 +1,8 @@
 2004-07-29  John Finlay  <finlay@moeraki.com>
 
+	* pygtk-gtktreeview.xml (get_drag_dest_row) None is a valid return
+	value.
+
 	* pygtk-gtkliststore.xml (insert_before) (insert_after)
 	sibling param can be None in PyGTK 2.4.
 
